resources/src/mediawiki.apipretty/apihelp.css
/* stylelint-disable selector-class-pattern */

.apihelp-header {
	clear: both;
	margin-bottom: 0.1em;
}

.apihelp-header.apihelp-module-name {
	/*
	 * This element is explicitly set to dir="ltr" in HTML.
	 * Set explicit alignment so that CSSJanus will flip it to "right";
	 * otherwise the alignment will be automatically set to "left" according
	 * to the element's direction, and this will have an inconsistent look.
	 */
	text-align: left;
}

div.apihelp-linktrail {
	font-size: smaller;
}

.apihelp-block {
	margin-top: 0.5em;
}

.apihelp-block-head {
	font-weight: bold;
}

.apihelp-flags {
	font-size: smaller;
	border: 1px solid #000;
	padding: 0.25em;
}

.apihelp-deprecated,
.apihelp-internal,
.apihelp-flag-deprecated,
.apihelp-flag-internal strong {
	font-weight: bold;
	color: #d33;
}

.apihelp-deprecated-value {
	text-decoration: line-through;
}

.apihelp-unknown {
	color: #72777d;
}

.apihelp-empty {
	color: #72777d;
}

.apihelp-help-urls ul {
	list-style: none;
	margin-left: 0;
}

.apihelp-parameters dt {
	white-space: nowrap;
	line-height: 1.5em;
}

.apihelp-parameters dt::after {
	content: ':\A0';
}

.apihelp-parameters dd {
	line-height: 1.5em;
}

.apihelp-parameters dd p:first-child {
	margin-top: 0;
}

.apihelp-examples dt {
	font-weight: normal;
	margin-top: 1em;
}

.api-main-links {
	text-align: center;
}

.api-main-links ul::before {
	content: '[';
}

.api-main-links ul::after {
	content: ']';
}

@media ( min-width: 720px ) {
	.apihelp-flags {
		float: right;
		width: 20em;
	}

	.apihelp-parameters dl,
	.apihelp-examples dl,
	.apihelp-permissions dl {
		margin-left: 2em;
	}

	.apihelp-parameters dt {
		float: left;
		clear: left;
		min-width: 10em;
	}

	.apihelp-parameters dd {
		margin: 0 0 0.5em 10em;
	}

	.apihelp-parameters dd.info {
		margin-left: 12em;
		text-indent: -2em;
	}
}

